{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 81,
  "lineage": "58105fbd-fe12-19f6-af38-a86287da52d0",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9fc25dd2506cf6d",
            "arn": "arn:aws:ec2:us-east-1:090605004199:instance/i-0c2cfac4e62e7577a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2cfac4e62e7577a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-057879b84cc29dbb5",
            "private_dns": "ip-10-0-2-72.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f3f29a05aac5f6a3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a680eb814fb5191",
            "tags": {
              "Name": "platform-capstone-app1"
            },
            "tags_all": {
              "Name": "platform-capstone-app1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c4073a220201d29"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_subnet.private_1",
            "module.vpc_app.aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9fc25dd2506cf6d",
            "arn": "arn:aws:ec2:us-east-1:090605004199:instance/i-056c0983c2a077b70",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056c0983c2a077b70",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-070c81c9d58e7674d",
            "private_dns": "ip-10-0-3-166.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05d56c145220b3eca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9921cc76c28b4a4",
            "tags": {
              "Name": "platform-capstone-app2"
            },
            "tags_all": {
              "Name": "platform-capstone-app2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c4073a220201d29"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_subnet.private_2",
            "module.vpc_app.aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9fc25dd2506cf6d",
            "arn": "arn:aws:ec2:us-east-1:090605004199:instance/i-0915642361636d305",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0915642361636d305",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04b8dbf6a4b4b800d",
            "private_dns": "ip-10-0-1-229.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.229",
            "public_dns": "ec2-100-52-183-106.compute-1.amazonaws.com",
            "public_ip": "100.52.183.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0abfd4b6c9bcff9d5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f8b4625cac5cec6",
            "tags": {
              "Name": "platform-capstone-bastion"
            },
            "tags_all": {
              "Name": "platform-capstone-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c4073a220201d29"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_subnet.public",
            "module.vpc_app.aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9fc25dd2506cf6d",
            "arn": "arn:aws:ec2:us-east-1:090605004199:instance/i-079f3cedb08828687",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-079f3cedb08828687",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05bb627b827202d87",
            "private_dns": "ip-10-1-1-245.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.245",
            "public_dns": "ec2-184-73-42-123.compute-1.amazonaws.com",
            "public_ip": "184.73.42.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-014f434657158d5b7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bcd23d14d2b01e2",
            "tags": {
              "Name": "platform-capstone-grafana"
            },
            "tags_all": {
              "Name": "platform-capstone-grafana"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ade705b9089ff0c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_obs.aws_subnet.public",
            "module.vpc_obs.aws_vpc.obs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9fc25dd2506cf6d",
            "arn": "arn:aws:ec2:us-east-1:090605004199:instance/i-033844db9de023faf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-033844db9de023faf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0838cb4163b469440",
            "private_dns": "ip-10-1-2-94.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01c1b8febad648b50",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0165d2151e8cda64e",
            "tags": {
              "Name": "platform-capstone-prometheus"
            },
            "tags_all": {
              "Name": "platform-capstone-prometheus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ade705b9089ff0c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_obs.aws_subnet.private",
            "module.vpc_obs.aws_vpc.obs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "router_placeholder",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9fc25dd2506cf6d",
            "arn": "arn:aws:ec2:us-east-1:090605004199:instance/i-062c44aefc25d1b6d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062c44aefc25d1b6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01a354ad76c2cc129",
            "private_dns": "ip-10-2-1-103.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.1.103",
            "public_dns": "ec2-18-212-222-208.compute-1.amazonaws.com",
            "public_ip": "18.212.222.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-062b5ff71926df0fd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03926b0f608690d41",
            "tags": {
              "Name": "platform-capstone-router"
            },
            "tags_all": {
              "Name": "platform-capstone-router"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f3c2f0b8ff13fe2b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_router.aws_subnet.public",
            "module.vpc_router.aws_vpc.router"
          ]
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "app_obs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0fbbe0a0f95c85c2d",
            "peer_owner_id": "090605004199",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0936666d70d6ecc5c",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-01d34a0377dd22166"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_vpc.app",
            "module.vpc_obs.aws_vpc.obs"
          ]
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "app_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-07cd8d3b8e24be971",
            "peer_owner_id": "090605004199",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-00be24aebf336d19e",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-01d34a0377dd22166"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_vpc.app",
            "module.vpc_router.aws_vpc.router"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_app",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c10941d192befb1e",
            "arn": "arn:aws:ec2:us-east-1:090605004199:elastic-ip/eipalloc-0c10941d192befb1e",
            "association_id": "eipassoc-0539c2ebf889d5347",
            "domain": "vpc",
            "id": "eipalloc-0c10941d192befb1e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-039c4af4bccab5bc2",
            "private_dns": "ip-10-0-1-195.ec2.internal",
            "private_ip": "10.0.1.195",
            "public_dns": "ec2-54-159-108-82.compute-1.amazonaws.com",
            "public_ip": "54.159.108.82",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_app",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:internet-gateway/igw-0c4a03261bc0625f0",
            "id": "igw-0c4a03261bc0625f0",
            "owner_id": "090605004199",
            "tags": {
              "Name": "platform-capstone-app-igw"
            },
            "tags_all": {
              "Name": "platform-capstone-app-igw"
            },
            "vpc_id": "vpc-01d34a0377dd22166"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_app",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c10941d192befb1e",
            "association_id": "eipassoc-05af44241b2d67eb5",
            "connectivity_type": "public",
            "id": "nat-067897b673ab41d4d",
            "network_interface_id": "eni-0f4029b2ef76e465a",
            "private_ip": "10.0.1.158",
            "public_ip": "54.159.108.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07f8b4625cac5cec6",
            "tags": {
              "Name": "platform-capstone-app-nat"
            },
            "tags_all": {
              "Name": "platform-capstone-app-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_eip.nat_eip",
            "module.vpc_app.aws_subnet.public",
            "module.vpc_app.aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:route-table/rtb-02118100a098d83a8",
            "id": "rtb-02118100a098d83a8",
            "owner_id": "090605004199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-067897b673ab41d4d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "platform-capstone-app-private-rt"
            },
            "tags_all": {
              "Name": "platform-capstone-app-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d34a0377dd22166"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_eip.nat_eip",
            "module.vpc_app.aws_nat_gateway.nat",
            "module.vpc_app.aws_subnet.public",
            "module.vpc_app.aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:route-table/rtb-0a5e357f952692ca3",
            "id": "rtb-0a5e357f952692ca3",
            "owner_id": "090605004199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4a03261bc0625f0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "platform-capstone-app-public-rt"
            },
            "tags_all": {
              "Name": "platform-capstone-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d34a0377dd22166"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_internet_gateway.igw",
            "module.vpc_app.aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07efa72923290b1c8",
            "route_table_id": "rtb-02118100a098d83a8",
            "subnet_id": "subnet-02a680eb814fb5191"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_eip.nat_eip",
            "module.vpc_app.aws_nat_gateway.nat",
            "module.vpc_app.aws_route_table.private_rt",
            "module.vpc_app.aws_subnet.private_1",
            "module.vpc_app.aws_subnet.public",
            "module.vpc_app.aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09caf7c17063c46f4",
            "route_table_id": "rtb-02118100a098d83a8",
            "subnet_id": "subnet-0c9921cc76c28b4a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_eip.nat_eip",
            "module.vpc_app.aws_nat_gateway.nat",
            "module.vpc_app.aws_route_table.private_rt",
            "module.vpc_app.aws_subnet.private_2",
            "module.vpc_app.aws_subnet.public",
            "module.vpc_app.aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d632b4e1fab2262f",
            "route_table_id": "rtb-0a5e357f952692ca3",
            "subnet_id": "subnet-07f8b4625cac5cec6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_internet_gateway.igw",
            "module.vpc_app.aws_route_table.public_rt",
            "module.vpc_app.aws_subnet.public",
            "module.vpc_app.aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:subnet/subnet-02a680eb814fb5191",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a680eb814fb5191",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "090605004199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platform-capstone-app-private-1"
            },
            "tags_all": {
              "Name": "platform-capstone-app-private-1"
            },
            "vpc_id": "vpc-01d34a0377dd22166"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:subnet/subnet-0c9921cc76c28b4a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9921cc76c28b4a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "090605004199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platform-capstone-app-private-2"
            },
            "tags_all": {
              "Name": "platform-capstone-app-private-2"
            },
            "vpc_id": "vpc-01d34a0377dd22166"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:subnet/subnet-07f8b4625cac5cec6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f8b4625cac5cec6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "090605004199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platform-capstone-app-public"
            },
            "tags_all": {
              "Name": "platform-capstone-app-public"
            },
            "vpc_id": "vpc-01d34a0377dd22166"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_app",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:vpc/vpc-01d34a0377dd22166",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-067cfcf59d625fe3f",
            "default_route_table_id": "rtb-0e28dbb66c87f4178",
            "default_security_group_id": "sg-05c4073a220201d29",
            "dhcp_options_id": "dopt-0913dad080549853b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d34a0377dd22166",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e28dbb66c87f4178",
            "owner_id": "090605004199",
            "tags": {
              "Name": "platform-capstone-vpc-app"
            },
            "tags_all": {
              "Name": "platform-capstone-vpc-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_obs",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:internet-gateway/igw-06296bc9ed309c2d9",
            "id": "igw-06296bc9ed309c2d9",
            "owner_id": "090605004199",
            "tags": {
              "Name": "platform-capstone-obs-igw"
            },
            "tags_all": {
              "Name": "platform-capstone-obs-igw"
            },
            "vpc_id": "vpc-0936666d70d6ecc5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_obs.aws_vpc.obs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_obs",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:route-table/rtb-0851ff6dd9168f7a2",
            "id": "rtb-0851ff6dd9168f7a2",
            "owner_id": "090605004199",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "platform-capstone-obs-private-rt"
            },
            "tags_all": {
              "Name": "platform-capstone-obs-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0936666d70d6ecc5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_obs.aws_vpc.obs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_obs",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:route-table/rtb-0eab3db2d9115fb2e",
            "id": "rtb-0eab3db2d9115fb2e",
            "owner_id": "090605004199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06296bc9ed309c2d9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "platform-capstone-obs-public-rt"
            },
            "tags_all": {
              "Name": "platform-capstone-obs-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0936666d70d6ecc5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_obs.aws_internet_gateway.igw",
            "module.vpc_obs.aws_vpc.obs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_obs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d884fa392a2ba2e5",
            "route_table_id": "rtb-0851ff6dd9168f7a2",
            "subnet_id": "subnet-0165d2151e8cda64e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_obs.aws_route_table.private_rt",
            "module.vpc_obs.aws_subnet.private",
            "module.vpc_obs.aws_vpc.obs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_obs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8e0cde99699f036",
            "route_table_id": "rtb-0eab3db2d9115fb2e",
            "subnet_id": "subnet-07bcd23d14d2b01e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_obs.aws_internet_gateway.igw",
            "module.vpc_obs.aws_route_table.public_rt",
            "module.vpc_obs.aws_subnet.public",
            "module.vpc_obs.aws_vpc.obs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_obs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:subnet/subnet-0165d2151e8cda64e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0165d2151e8cda64e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "090605004199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platform-capstone-obs-private"
            },
            "tags_all": {
              "Name": "platform-capstone-obs-private"
            },
            "vpc_id": "vpc-0936666d70d6ecc5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_obs.aws_vpc.obs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_obs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:subnet/subnet-07bcd23d14d2b01e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bcd23d14d2b01e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "090605004199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platform-capstone-obs-public"
            },
            "tags_all": {
              "Name": "platform-capstone-obs-public"
            },
            "vpc_id": "vpc-0936666d70d6ecc5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_obs.aws_vpc.obs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_obs",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "obs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:vpc/vpc-0936666d70d6ecc5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e834a2c0dbb03403",
            "default_route_table_id": "rtb-0f09d5129e9ef7a17",
            "default_security_group_id": "sg-04ade705b9089ff0c",
            "dhcp_options_id": "dopt-0913dad080549853b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0936666d70d6ecc5c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f09d5129e9ef7a17",
            "owner_id": "090605004199",
            "tags": {
              "Name": "platform-capstone-vpc-obs"
            },
            "tags_all": {
              "Name": "platform-capstone-vpc-obs"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_router",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:internet-gateway/igw-0e1b57b1c43c21a8a",
            "id": "igw-0e1b57b1c43c21a8a",
            "owner_id": "090605004199",
            "tags": {
              "Name": "platform-capstone-router-igw"
            },
            "tags_all": {
              "Name": "platform-capstone-router-igw"
            },
            "vpc_id": "vpc-00be24aebf336d19e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_router.aws_vpc.router"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_router",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:route-table/rtb-0289fb91dc3fde39b",
            "id": "rtb-0289fb91dc3fde39b",
            "owner_id": "090605004199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1b57b1c43c21a8a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "platform-capstone-router-public-rt"
            },
            "tags_all": {
              "Name": "platform-capstone-router-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00be24aebf336d19e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_router.aws_internet_gateway.igw",
            "module.vpc_router.aws_vpc.router"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_router",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce61b2488c33e43c",
            "route_table_id": "rtb-0289fb91dc3fde39b",
            "subnet_id": "subnet-03926b0f608690d41"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_router.aws_internet_gateway.igw",
            "module.vpc_router.aws_route_table.public_rt",
            "module.vpc_router.aws_subnet.public",
            "module.vpc_router.aws_vpc.router"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_router",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:subnet/subnet-03926b0f608690d41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03926b0f608690d41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "090605004199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platform-capstone-router-public"
            },
            "tags_all": {
              "Name": "platform-capstone-router-public"
            },
            "vpc_id": "vpc-00be24aebf336d19e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_router.aws_vpc.router"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_router",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090605004199:vpc/vpc-00be24aebf336d19e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0241a9ef2f0370973",
            "default_route_table_id": "rtb-067d9150a76f1b63e",
            "default_security_group_id": "sg-0f3c2f0b8ff13fe2b",
            "dhcp_options_id": "dopt-0913dad080549853b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00be24aebf336d19e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-067d9150a76f1b63e",
            "owner_id": "090605004199",
            "tags": {
              "Name": "platform-capstone-vpc-router"
            },
            "tags_all": {
              "Name": "platform-capstone-vpc-router"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}